--- a/src/computer/computer.css
+++ b/src/computer/computer.css
@@ -1,21 +1,195 @@
-.search{
-    margin-top: 30px;
-    width:35%;
-    height:40px;
-    margin-left: 30px;
-    border-radius: 20px;
-    background-color: rgb(176, 180, 185);
-    border:none;
-    padding-left: 20px;
-    font-size: 18px;
+@media(max-width:500px){
+    .com{
+        width:100%;
+        overflow-x: hidden;
+        .heading{
+            display:flex;
+            margin-left: 5%;
+            h1{
+                font-Size:30px;
+            }
+            .search{
+                margin-top: 23px;
+                margin-left: 10px;
+                width:80%;
+                height: 30px;
+                border-radius: 10px;
+                background-color: rgb(163, 169, 174);
+                border:none;
+                padding-left: 20px;
+                font-size: 20px;
+                outline:none;
+            }
+    
+        }
+        .items{
+            width:80%;
+            margin-left: 10%; 
+            .left{
+                .image{
+                    width:300px;
+                    height:300px; 
+                }
+            }
+            .right{
+                h2{
+                    font-weight: 400;
+                }
+                .addcart{
+                    height:40px;
+                    width:100px;
+                    background-color: rgb(227, 227, 38);
+                    border-radius: 10px;
+                    border:none;
+                }
+            }
+        }
+    }
 }
-.icon1{
-    width: 70px;
-    margin-top: 30px;
-    height:42px;
-    background-color: rgb(81, 64, 232);
-    margin-left: -6.2%;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius:20px ;
-
+@media(min-width:700px){
+    .com{
+        width:100%;
+        .heading{
+            display:flex;
+            margin-left: 20%;
+            .search{
+                margin-top: 30px;
+                margin-left: 30px;
+                width:500px;
+                height: 40px;
+                border-radius: 15px;
+                background-color: rgb(163, 169, 174);
+                border:none;
+                padding-left: 20px;
+                font-size: 20px;
+                outline:none;
+            }
+    
+        }
+        .items{
+            width:80%;
+            margin-left: 10%;
+            display:flex;
+            height:400px; 
+            .left{
+                .image{
+                    width:500px;
+                    height:500px; 
+                    border-radius: 5%;
+                }
+            }
+            .right{
+                padding-top: 120px;
+                h2{
+                    font-weight: 400;
+                }
+                .addcart{
+                    height:40px;
+                    width:100px;
+                    background-color: rgb(227, 227, 38);
+                    border-radius: 10px;
+                    border:none;
+                }
+            }
+        }
+    }
+}
+@media(min-width:950px){
+    .com{
+        width:100%;
+        .heading{
+            display:flex;
+            margin-left: 20%;
+            .search{
+                margin-top: 30px;
+                margin-left: 30px;
+                width:500px;
+                height: 40px;
+                border-radius: 15px;
+                background-color: rgb(163, 169, 174);
+                border:none;
+                padding-left: 20px;
+                font-size: 20px;
+                outline:none;
+            }
+    
+        }
+        .items{
+            width:80%;
+            margin-left: 10%;
+            display:flex;
+            height:400px; 
+            .left{
+                .image{
+                    width:500px;
+                    height:500px; 
+                    border-radius: 5%;
+                }
+            }
+            .right{
+                padding-top: 120px;
+                h2{
+                    font-weight: 400;
+                }
+                .addcart{
+                    height:40px;
+                    width:100px;
+                    background-color: rgb(227, 227, 38);
+                    border-radius: 10px;
+                    border:none;
+                }
+            }
+        }
+    }
+}
+@media(min-width:1200px){
+    .com{
+        width:100%;
+        .heading{
+            display:flex;
+            margin-left: 20%;
+            h1{
+                font-Size:40px;
+            }
+            .search{
+                margin-top: 30px;
+                margin-left: 30px;
+                width:500px;
+                height: 40px;
+                border-radius: 15px;
+                background-color: rgb(163, 169, 174);
+                border:none;
+                padding-left: 20px;
+                font-size: 20px;
+                outline:none;
+            }
+    
+        }
+        .items{
+            width:80%;
+            margin-left: 10%;
+            display:flex;
+            height:400px; 
+            .left{
+                .image{
+                    width:500px;
+                    height:500px; 
+                    border-radius: 5%;
+                }
+            }
+            .right{
+                padding-top: 120px;
+                h2{
+                    font-weight: 400;
+                }
+                .addcart{
+                    height:40px;
+                    width:100px;
+                    background-color: rgb(227, 227, 38);
+                    border-radius: 10px;
+                    border:none;
+                }
+            }
+        }
+    }
 }
