--- a/src/computer/computer.css
+++ b/src/computer/computer.css
@@ -26,7 +26,7 @@
                 .icondim{
                     margin-top: 23px;
                     margin-left: -40px;
-                   background-color: rgb(227, 227, 38);
+                   background-color: rgb(95, 95, 201);
                     width:30px;
                     height: 32px;
                     border-top-right-radius: 10px;
@@ -34,6 +34,7 @@
                     .icon2{
                         padding:8px;
                         font-size: 15px;
+                        color:white;
                     }
                 }
             }
@@ -58,9 +59,10 @@
                 .addcart{
                     height:40px;
                     width:100px;
-                    background-color: rgb(227, 227, 38);
+                    background-color: rgb(95, 95, 201);
                     border-radius: 10px;
                     border:none;
+                    color:white;
                 }
             }
         }
@@ -90,7 +92,7 @@
                 .icondim{
                     margin-top: 23px;
                     margin-left: -21px;
-                   background-color: rgb(227, 227, 38);
+                   background-color: rgb(95, 95, 201);
                     width:35px;
                     height: 42px;
                     border-top-right-radius: 10px;
@@ -98,6 +100,7 @@
                     .icon2{
                         padding:10px;
                         font-size: 18px;
+                        color:white;
                     }
                 }
             }
@@ -123,9 +126,10 @@
                 .addcart{
                     height:40px;
                     width:130px;
-                    background-color: rgb(227, 227, 38);
+                    background-color:rgb(95, 95, 201);
                     border-radius: 10px;
                     border:none;
+                    color:white;
                 }
             }
         }
@@ -159,7 +163,7 @@
                 .icondim{
                     margin-top: 30px;
                     margin-left: -40px;
-                   background-color: rgb(227, 227, 38);
+                   background-color: rgb(95, 95, 201);
                     width:40px;
                     height: 42px;
                     border-top-right-radius: 15px;
@@ -167,6 +171,7 @@
                     .icon2{
                         padding:10px;
                         font-size: 20px;
+                        color:white;
                     }
                 }
             }
@@ -192,9 +197,10 @@
                 .addcart{
                     height:40px;
                     width:100px;
-                    background-color: rgb(227, 227, 38);
+                    background-color: rgb(95, 95, 201);
                     border-radius: 10px;
                     border:none;
+                    color:white;
                 }
             }
         }
