computer.jsx header.jsx header.css cart.css cart.jsx App.js

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -55,6 +55,10 @@
                 .iconfont{
                     font-size: 30px;
                 }
+                .cartcount{
+                    font-size: 23px;
+                   
+                }
             }
         }
     }
