cart.jsx computer.css home.css home.jsx payment.jsx television.jsx App.js earpodes.json mobile.json

--- a/src/earpodes/earpodes.css
+++ b/src/earpodes/earpodes.css
@@ -1,5 +1,5 @@
 @media(max-width:500px){
-    .com{
+    .ear{
         width:100%;
         overflow-x: hidden;
         .heading{
@@ -69,7 +69,7 @@
     }
 }
 @media(min-width:700px){
-    .com{
+    .ear{
         width:100%;
         .heading{
             display:flex;
@@ -137,8 +137,8 @@
 }
 
 @media(min-width:1200px){
-    .com{
-        width:100%;
+    .ear{
+        width:90%;
         .heading{
             display:flex;
             margin-left: 20%;
