--- a/src/mobile/mobile.css
+++ b/src/mobile/mobile.css
@@ -1,5 +1,5 @@
 @media(max-width:500px){
-    .com{
+    .mob{
         width:100%;
         overflow-x: hidden;
         .heading{
@@ -47,7 +47,7 @@
                 .image{
                     padding-left: 5%;
                     width:100%;
-                    height:300px; 
+                    
                 }
             }
             .right{
@@ -69,7 +69,7 @@
     }
 }
 @media(min-width:700px){
-    .com{
+    .mob{
         width:100%;
         .heading{
             display:flex;
@@ -137,7 +137,7 @@
 }
 
 @media(min-width:1200px){
-    .com{
+    .mob{
         width:100%;
         .heading{
             display:flex;
